# dali

./: AI_GENERATION_UPGRADE_PLAN.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  tmpclaude-3f03-cwd  tmpclaude-eadd-cwd
dali-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  tmpclaude-1bec-cwd
dali-api/alembic/: env.py
dali-api/alembic/versions/: 3e390cb5626f_add_outfit_and_share_record_tables_and_.py  72c396c5e2f2_create_users_table.py  97db65a6eeb6_create_user_preferences_table.py  f8a2c1b3d4e5_add_outfit_streaming_fields.py
dali-api/app/: __init__.py  __version__.py  config.py  main.py  tmpclaude-8086-cwd
dali-api/app/api/: deps.py  tmpclaude-60ec-cwd
dali-api/app/core/: exceptions.py  logging.py  security.py
dali-api/app/db/: init_db.py  session.py
dali-api/app/integrations/: __init__.py  alibaba_oss.py  alibaba_vision.py  qwen_vision.py  qwen_vl.py  siliconflow.py  tongyi_qianwen.py  weather.py  wechat.py
dali-api/app/models/: __init__.py  base.py  outfit.py  outfit_item.py  preference.py  share_record.py  theory.py  tmpclaude-fa1a-cwd  user.py  user_preferences.py
dali-api/app/schemas/: auth.py  common.py  garment.py  outfit.py  segmentation.py  tmpclaude-ff0d-cwd  upload.py  user.py  user_preferences.py  wardrobe.py
dali-api/app/services/: ai_orchestrator.py  auth.py  outfit.py  sms.py  storage.py  streaming_generator.py  user.py  user_preferences.py  verification_store.py
dali-api/docs/: DOCKER_DEPLOYMENT.md  OSS_SETUP_GUIDE.md
dali-api/tests/: conftest.py
(+374 files in other folders)
